src/containers/Messages/style.css
@import "../../global.css";
.itemTitle {
  font-size: calc(1.8 * var(--unit));
  line-height: calc(2 * var(--unit));
  margin: 0;
  font-weight: bold;
}
.listContainer,
.listContainerTight {
  display: flex;
  min-height: 7.2rem;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  padding-top: calc(1 * var(--unit));
  padding-bottom: calc(1 * var(--unit));
}
.listContainerTight {
  min-height: 0rem;
  padding-bottom: 0;
}
.listContainerAdd {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  padding-bottom: 10px;
}
.btnBlock {
  display: block;
  width: 100%;
}
.checkbox {
  display: inline-block;
}
.dropdown > * {
  padding: 0;
}
.dropdown input {
  border-bottom: none;
}
.preview {
  border: 1px solid #ccc;
  background: #f2f2f2;
  padding: calc(2 * var(--unit));
  position: relative;
}
.previewTitle {
  position: absolute;
  top: 0;
  right: 0;
  background: #ccc;
  font-size: calc(1 * var(--unit));
  padding: 5px 10px;
}
.content {
  white-space: normal;
}
.cardList {
  li > span {
    align-items: flex-start;
    & > div {
      /* Fix ie overflow */
      flex: 1;
    }
  }
}
.htmlWrapper {
  ul,
  ol {
    margin-left: 1em;
  }
}

